Side navbar collapse issue fix

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,88 @@
 @import 'bootstrap/scss/bootstrap';
-@import './custom.scss';
 
 @import 'react-bootstrap-sidebar-menu/dist/sidebar-menu.scss';
+@import './custom.scss';
+
+.main-wrapper {
+	width: 100vw;
+	height: 100vh;
+	background: #f3f4f6;
+	position: relative;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto 1fr;
+	grid-template-areas:
+		'sidebar header'
+		'sidebar main';
+}
+
+.main-header {
+	grid-area: header;
+	padding: 0.5rem;
+}
+
+.main-container {
+	grid-area: main;
+	box-shadow: inset 2px 1px 9px 1px rgba($dark, 0.1);
+	overflow: auto;
+	padding-top: 1rem;
+}
+
+.sidebar-menu {
+	padding-top: 0;
+	flex-direction: column;
+	grid-area: sidebar;
+	overflow-y: auto;
+	// width: 260px;
+}
+
+.sidebar-menu-collapse.show {
+	width: 260px;
+}
+
+.sidebar-menu-light .sidebar-menu-nav .sidebar-menu-nav-link.active,
+.sidebar-menu-light .sidebar-menu-nav .active.sidebar-menu-sub-toggle {
+	color: var(--grey-white);
+	background-color: var(--grey-blue);
+	border-radius: 10px;
+	font-weight: bold;
+}
+
+.logo {
+	width: 50px;
+}
+
+// side navbar hide
+.collapse:not(.show) {
+	display: block !important;
+}
+
+.sidebar-menu-collapse:not(.show) {
+	width: 72px !important;
+}
+
+.powered-by-title {
+    display: none;
+}
+
+.show .powered-by-title {
+    font-size: 12px;
+    color: var(--blue);
+    text-align: center;
+    display: block;
+}
+
+.navbar-container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: calc(100% - 75px);
+}
+
+// .sidebar-menu-body {
+//     display: none !important;
+// }
+
+// .show .sidebar-menu-body {
+//     display: block !important;
+// }
