--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif !important;
     font-size: 16px;
     line-height: 1.5;
     font-weight: 400;
